sumo/tests/od2trips/errors/false_options/missing_net/errors.od2trips
Error: No net input file (-n) specified.
Quitting (on error).
